--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <img src="/img/user.jpeg" alt="Image" />
             <div class="name">
                 Rahul Jain - PMP® - SSGB
-                <h3>comment</h3> 
-                <p>comment</p></p>
+<!--                 <h3>comment</h3> 
+                <p>comment</p></p> -->
             </div> 
         </div>
         <p class="testimonial-text"><i class="fas fa-quote-left"></i> Thank you Rakesh Sir for providing training and guidance for PMP exam. That was most valuable knowledge during my PMP preparation. It was clear and very well organized and interactive that I could learn and gain knowledge from all aspects of project management from other domains as well. And I was able to relate my understanding developed with my current organization structure, roles and responsibilities. I had passed my exam last week. I will see if i can get more opportunities to learn from you. <i class="fas fa-quote-right"></i></p>
