--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="address">
                         <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
-                        <a>India</a>
+                        <a>Bhakti Park, Mumbai - 37</a>
                         </div>
                 </div>
             </div>
