--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
     <!-- Home image -->
     <section class="tm-banner-section" id="tmHomeSection">
-        <img src="/img/Art-1.png" alt="Image" />
+     <!--   <img src="/img/Art-1.png" alt="Image" /> -->
+      <img src="/img/maaeend_work-in-progress.png" alt="Image" />
     </section>
 
     <!-- Services -->
