--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
 <body>
-  
+<!--   
     <!-- navbar -->
     <div class="tm-nav-section">
       <div class="container">
@@ -82,14 +82,14 @@
             </div>
         </nav>
       </div>
-    </div>
+    </div> -->
 
     <!-- Home image -->
     <section class="tm-banner-section" id="tmHomeSection">
      <!--   <img src="/img/Art-1.png" alt="Image" /> -->
       <img src="/img/maaeend_work-in-progress.png" alt="Image" />
     </section>
-  
+<!--   
 
     <!-- Services -->
     <div class="tm-features-section" id="services">
@@ -270,7 +270,7 @@
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script> -->
   
   </body>
 </html>
