--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                             </li>
                         </ul>
                     </div>
-                </div> -->
+                </div> 
+              -->
 
             
 <!--             </div>
@@ -82,7 +83,8 @@
             </div>
         </nav>
       </div>
-    </div> -->
+    </div> 
+  -->
 
     <!-- Home image -->
     <section class="tm-banner-section" id="tmHomeSection">
@@ -91,7 +93,8 @@
     </section>
   
 
-<!--     <!-- Services -->
+<!--     
+  <!-- Services -->
     <div class="tm-features-section" id="services">
         <header>
             <h2 class="tm-company-features-header">Services</h2>
@@ -119,7 +122,8 @@
                 
             </section>
         </div>
-    </div> -->
+    </div> 
+  -->
 
 <!--     
     <!-- About us  -->
@@ -167,11 +171,13 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> 
+  -->
 
 
 
-<!-- <!-- Testimonials -->
+<!-- 
+  <!-- Testimonials -->
 <h2 class="tm-testimonials">Testimonials</h2>
 <div id="testimonials" class="carousel" data-flickity='{ "groupCells": true,"autoPlay":true }'>
     <div class="carousel-cell">
@@ -200,9 +206,11 @@
     </div>
   
   
-</div> -->
+</div> 
+  -->
 
-<!-- <!-- contact us -->
+<!-- 
+  <!-- contact us -->
 <footer id="contact">
     <div class="content">
         <div class="upper box">
